--- a/client/assets/styles/components/categories-bar.style.scss
+++ b/client/assets/styles/components/categories-bar.style.scss
@@ -95,6 +95,14 @@
       }
     }
   }
+
+  // ------------------------------------------------------------------------------------------------------
+
+  @media screen and (max-width: 1000px) {
+    & {
+      display: none;
+    }
+  }
 }
 
 // ------------------------------------------------------------------------------------------------------
