- [Dev][FE] Add drawer.

--- a/client/assets/styles/pages/categories.style.scss
+++ b/client/assets/styles/pages/categories.style.scss
@@ -1,7 +1,5 @@
 @import "@/assets/styles/_colors.scss";
 @import "@/assets/styles/_variables.scss";
-@import "@/assets/styles/_mixins.scss";
 
-div {
-  border: 1px;
+.page {
 }
